tests/lit/tcheck/shadowing_00.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2026 Intel Corporation

function F(x : Integer)
begin
    let x := 42;
// CHECK: Type error: variable `x` previously declared
end
